Make Redis optional for production deployments

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
-﻿NODE_ENV=development
+NODE_ENV=development
 PORT=3000
 LOG_LEVEL=info
 MONGO_URI=mongodb://mongo:27017/filtro
+ENABLE_REDIS=true
 REDIS_URL=redis://redis:6379
 JWT_SECRET=change-me-change-me-change-me-change-me
 TOKEN_TTL_SECONDS=3600
